# rag-system-aws

./: .env_template  .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt  ruff.toml
app/: __init__.py  config.py  main.py
app/api/: routes.py  schemas.py
app/services/: embedding.py  llm.py  rag_pipeline.py  retrieval.py  s3.py  wikipedia.py
app/static/: script.js  styles.css
app/templates/: index.html
app/utils/: load_initial_data.py
docs/: RAG_Specs.md
scripts/: docs_to_os_index.py
